<resources>
    <string name="app_name">JPBLE</string>
    <string name="load_skip">跳过</string>
    <string name="back">返回</string>
    <string name="next">下一个</string>
    <string name="load_button">Open crops</string>
    <string name="sign_in">登入</string>
    <string name="login">注册</string>
    <string name="sign_mail">邮箱:</string>
    <string name="sign_psw">密码:</string>
    <string name="add">发现设备</string>
    <string name="register_msg">By signing up, you agree to\nour terms of use, and privacy policy.</string>
    <string name="register_msg3">our terms of use,,privacy policy.</string>
    <string name="register_msg2">Passwords must have a minimum length of (6-8) characters [a-z] and numeric characters.</string>
    <string name="register_psw">确认密码:</string>
    <string name="register_bt">确定</string>
    <string name="register_tos">密码输入有误</string>
    <string name="register_tos2">非法邮箱</string>
    <string name="add_bt">完成</string>
    <string name="code_msg">You’ll get a email with your verification code.</string>
    <string name="code_msg2">Mail auto-reception should be set</string>
    <string name="code_msg3">Enter the code to sign in.</string>
    <string name="code_msg4">Enter the verification code within 60min.</string>
    <string name="succeed_msg">Registration success.</string>
    <string name="sign_forgot">Forgot Password?</string>
    <string name="sign_web">http://geo.crops-sports.com/terms-of-service/</string>
    <string name="me_web">http://geo.crops-sports.com/contact/index.html</string>
    <string name="home_riding">开始</string>
    <string name="home_end">停止</string>
    <string name="home_lock">上锁</string>
    <string name="login_msg7">提交中…</string>
    <string name="login_msg8">输入内容有误</string>
    <string name="login_msg9">注册成功</string>
    <string name="login_msg23">修改成功</string>
    <string name="login_msg10">服务器连接异常</string>
    <string name="login_msg11">验证码获取成功</string>
    <string name="login_msg12">TOKEN错误</string>
    <string name="login_msg13">TOKEN已过期</string>
    <string name="login_msg14">设备类型错误</string>
    <string name="login_msg15">异地登入</string>
    <string name="login_msg16">缺少参数</string>
    <string name="login_msg17">数据不存在</string>
    <string name="login_msg18">数据已存在</string>
    <string name="login_msg19">验证码已过期</string>
    <string name="login_msg20">验证码已使用</string>
    <string name="login_msg21">请求错误</string>
    <string name="login_msg22">登入成功</string>
    <string name="login_msg24">退出登入</string>
    <string name="login_msg25">设备已被其他用户绑定</string>
    <string name="login_msg26">设备绑定成功</string>
    <string name="me_riding">Riding time</string>
    <string name="me_calorie">Calorie</string>
    <string name="me_trip2">Trip</string>
    <string name="me_max">Max speed</string>
    <string name="home_unlock">解锁</string>
    <string name="security_msg">We suggest to turn OFF the GPS service\nwhen you are not searching.\nIt may save the battery power of product.</string>
    <string name="security_msg2">Tap to enable upcoming vibration\nand limited distance exceed message.</string>
    <string name="security_msg3">Location service must be switched ON\nin order to find yourself on a map.</string>
    <string name="security_log">Log</string>
    <string name="security_message">Security\nmessage</string>
    <string name="security_search">搜索</string>
    <string name="security_title">Main</string>
    <string name="security_title2">Map</string>
    <string name="me_trip">My Trip</string>
    <string name="me_asset">My Geo</string>
    <string name="me_modify">Edit</string>
    <string name="me_equipment">Equipment configuration</string>
    <string name="me_about">About version</string>
    <string name="me_out">Sign out</string>
    <string name="me_contact">Contact us</string>
    <string name="me_sim">SIM Card management</string>
    <string name="me_device">Device management</string>
    <string name="asset_title">My Geo</string>
    <string name="asset_msg">To tap for「+」register the products</string>
    <string name="trip_title">Device management</string>
    <string name="trip_riding">Riding</string>
    <string name="trip_total">Total ride</string>
    <string name="equipment_time">Track interval time</string>
    <string name="equipment_time2">%s sec</string>
    <string name="equipment_intensity">Vibration intensity</string>
    <string name="equipment_gps">GPS</string>
    <string name="equipment_off">OFF</string>
    <string name="equipment_low">Low</string>
    <string name="equipment_mid">Mid</string>
    <string name="equipment_high">High</string>
    <string name="equipment_msg">To able to set your own track signal with interval time.\n* To set up shorter interval time, the battery power may run faster.</string>
    <string name="equipment_msg2">To able to set “My GEO” vibration intensity.\n\n &lt;Vibration intensity&gt; Please select the level for High, Mid, Low, or OFF.\n\n* The product may have different criterion cause of GPS environment or\nantenna position.</string>
    <string name="ble_paired">Paired device</string>
    <string name="ble_disconnect">disconnect</string>
    <string name="ble_connected">connected</string>
    <string name="ble_search">Search Bluetooth device</string>
    <string name="ble_search2">Search</string>
    <string name="ble_abnormal">Mobile phone Bluetooth exception</string>
    <string name="activity_ble_search_info">available device</string>
    <string name="activity_ble_pairing_device">paired device</string>
    <string name="activity_dialog_msg_warming">The GPS is not open, can cause bluetooth to be unable to use, whether to turn on bluetooth?</string>
    <string name="activity_dialog_key_error">KEY ERROR</string>
    <string name="activity_dialog_connect">connect</string>
    <string name="activity_dialog_cancel">cancel</string>
    <string name="activity_dialog_title_warming">Warm Tips</string>
    <string name="dialog_bt">Confirm</string>
    <string name="dialog_bt2">Cancel</string>
    <string name="dialog_title">Verify the device management password</string>
    <string name="dialog_title2">Register the product at next page</string>
    <string name="dialog_msg">Enter password:</string>
    <string name="dialog_msg2">Default password is 123456789</string>
    <string name="dialog_hint">Allow</string>
    <string name="dialog_hint2">Don’t Allow</string>
    <string name="sim_title">SIM Card management</string>
    <string name="sim_set">Set SIM card number</string>
    <string name="sim_set2">Card Number:</string>
    <string name="sim_expiration">SIM card password  settings</string>
    <string name="toastor_msg">Communication access to success</string>
    <string name="toastor_msg2">Communication access failure</string>
    <string name="radio_a">1 Gears</string>
    <string name="radio_b">2 Gears</string>
    <string name="radio_c">3 Gears</string>
    <string name="user_group2">Gear set</string>
    <string name="user_name2">Modify the tracking interval</string>
    <string name="dialog_msg7">Minutes:</string>
    <string name="about_msg">Software version information :v%s</string>
    <string name="about_msg2">Hardware version information :v%s</string>
    <string name="add_name">Name</string>
    <string name="add_msg">My Geo</string>
    <string name="add_msg2">Enter the name to “My Geo”</string>
    <string name="add_msg3">Activate the Bluetooth on the product.</string>
    <string name="add_msg4">Bluetooth : %s</string>
    <string name="device_msg">ICCID/IMSI</string>
    <string name="device_msg2">APN</string>
    <string name="device_msg3">User ID</string>
    <string name="device_msg4">Password</string>
    <string name="device_msg5">Networking Type</string>
    <string name="device_rb">APN</string>
    <string name="device_rb2">USER</string>
    <string name="device_rb3">CHAP</string>
    <string name="device_done">Done</string>
    <string name="device_done6">设备联网失败</string>
    <string name="device_done7">设备联网成功</string>

    <!--device manage-->
    <string name="activity_btn_close">Shut down</string>
    <string name="activity_close_device">Shut down</string>
    <string name="activity_close_device_info">After shut down, it can not search the device by bluetooth.  To re-start up this device, please reconnect the bluetooth to the app.</string>
    <string name="activity_close_device_info_2">&#160;&#160;&#160;&#160;Connect power back with device to start up this device</string>

    <string name="activity_cancel_matching">Cancel Pairing</string>
    <string name="activity_cancel_matching_info">After cancel the device pairing, you may change to other user’s device.</string>
    <string name="activity_btn_cancel_pairing">Cancel Pairing</string>

    <string name="activity_cancel_matching_close">All reset</string>
    <string name="activity_cancel_matching_close_info">After push "All reset", the products (My GEO) data on app will be all invalid.</string>
    <string name="activity_btn_cancel_pairing_close">All reset</string>

    <string name="activity_device_dialog_title_warming">Warm Tips</string>
    <string name="device_dialog_successful">successful</string>
    <string name="error_un_connect_tip">Please connect device!</string>

    <string name="close_device_tip">Sure you want to shut down!</string>
    <string name="cancel_pairing_device_tip">Sure you want to cancel pairing!</string>
    <string name="close_and_unpairing_device_tip">Sure you want to shut down the device!</string>
    <string name="activity_dialog_ok">ok</string>
    <string name="activity_dialog_title_input_key">input connect key</string>
    <string name="title_activity_maps">Map</string>
</resources>
