<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.jpble.activity.AddActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_name"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/add_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:focusable="true"
        android:hint="@string/add_msg"
        android:paddingStart="40dp"
        android:textColorHint="@color/zircon"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:text="@string/add_msg2"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/add_ble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:text="@string/add_msg4"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/add_msg3"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/add_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/add_bg"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/add" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/add_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/dialog_bg" />


        <TextView
            android:id="@+id/add_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/back"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/black" />

    </RelativeLayout>
</LinearLayout>
