<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ver="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.jpble.activity.CodeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/code_msg_ll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/code_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_msg"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/code_msg2"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/code_msg3"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.jpble.widget.VerificationCodeInput
            android:id="@+id/verificationCodeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ver:box="6"
            ver:inputType="number"
            ver:child_h_padding="5dp"
            ver:child_width="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"
            android:text="@string/code_msg4"
            android:textColor="@color/black" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/code_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/back"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/code_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:drawableEnd="@drawable/next"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/next"
            android:textColor="@color/black" />
    </RelativeLayout>
</LinearLayout>
