<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/commom_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:padding="12dp"
            android:text="@string/dialog_title"
            android:textColor="@color/black"
            android:textSize="13sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f2f2f2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/dialog_msg"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/dialog_psw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:hint="@string/dialog_msg2"
            android:inputType="numberPassword"
            android:maxLength="9"
            android:padding="10dp"
            android:textSize="10sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/zircon" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_left_white"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/dialog_bt"
        android:textColor="@color/black" />


</LinearLayout>